Switch to the nginx-route integration

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,5 @@ resources:
     upstream-source: ghcr.io/runatlantis/atlantis
 
 requires:
-  ingress:
-    interface: ingress
+  nginx-route:
+    interface: nginx-route
