Switch to ingress v2 to simplify the charm, allow us to remove site-url config

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ resources:
     upstream-source: ghcr.io/runatlantis/atlantis
 
 requires:
-  nginx-route:
-    interface: nginx-route
+  ingress:
+    interface: ingress
+    limit: 1
